// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigGenerator — Snapshot Tests static config only (no rack devices) matches snapshot for empty dynamic jobs 1`] = `
"global:
  scrape_interval: 15s
  evaluation_interval: 15s
rule_files:
  - /etc/prometheus/alerts.yml
alerting:
  alertmanagers:
    - static_configs:
        - targets:
            - alertmanager:9093
scrape_configs:
  - job_name: prometheus
    static_configs:
      - targets:
          - localhost:9090
  - job_name: rack-tracker-backend
    metrics_path: /metrics
    scrape_interval: 15s
    static_configs:
      - targets:
          - backend:3000
  - job_name: node-exporter
    scrape_interval: 15s
    static_configs:
      - targets:
          - node-exporter:9100
"
`;

exports[`ConfigGenerator — Snapshot Tests with dynamic rack-device jobs matches snapshot for multiple racks 1`] = `
"global:
  scrape_interval: 15s
  evaluation_interval: 15s
rule_files:
  - /etc/prometheus/alerts.yml
alerting:
  alertmanagers:
    - static_configs:
        - targets:
            - alertmanager:9093
scrape_configs:
  - job_name: prometheus
    static_configs:
      - targets:
          - localhost:9090
  - job_name: rack-tracker-backend
    metrics_path: /metrics
    scrape_interval: 15s
    static_configs:
      - targets:
          - backend:3000
  - job_name: node-exporter
    scrape_interval: 15s
    static_configs:
      - targets:
          - node-exporter:9100
  - job_name: rack_device_rack_a1
    metrics_path: /metrics
    scrape_interval: 30s
    static_configs:
      - targets:
          - backend:3000
        labels:
          rack: RACK-A1
          environment: test
  - job_name: rack_device_rack_b1
    metrics_path: /metrics
    scrape_interval: 30s
    static_configs:
      - targets:
          - backend:3000
        labels:
          rack: RACK-B1
          environment: test
"
`;

exports[`ConfigGenerator — Snapshot Tests with dynamic rack-device jobs matches snapshot for single rack with multiple devices 1`] = `
"global:
  scrape_interval: 15s
  evaluation_interval: 15s
rule_files:
  - /etc/prometheus/alerts.yml
alerting:
  alertmanagers:
    - static_configs:
        - targets:
            - alertmanager:9093
scrape_configs:
  - job_name: prometheus
    static_configs:
      - targets:
          - localhost:9090
  - job_name: rack-tracker-backend
    metrics_path: /metrics
    scrape_interval: 15s
    static_configs:
      - targets:
          - backend:3000
  - job_name: node-exporter
    scrape_interval: 15s
    static_configs:
      - targets:
          - node-exporter:9100
  - job_name: rack_device_rack_a1
    metrics_path: /metrics
    scrape_interval: 30s
    static_configs:
      - targets:
          - backend:3000
        labels:
          rack: RACK-A1
          environment: test
"
`;
